--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="haha-box">
         <h1 class="haha-text">ТИ ГЕЙ?????????????</h1>
         <button class="haha-no">НІI </button>
-        <button class="haha-yes">ТАК</button></div>
+        <button class="haha-yes">ТАК</button>
+        <a href="https://rt.pornhub.com/view_video.php?viewkey=ph628a9315" class="haha-page">.......</a>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
